[package]
name = "gm-unleashed"
version = "0.1.0"
authors = ["bjoern-j <b.jueliger@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
imgui = "*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"
gm-unleashed-md = { path = "gm-unleashed-md" }